@@ -12,14 +12,12 @@ import static java.util.Objects.requireNonNull;
 public class JaxrsBinder
 {
     private final Multibinder<Object> resourceBinder;
-    private final Multibinder<JaxrsBinding> keyBinder;
     private final Binder binder;
 
     private JaxrsBinder(Binder binder)
     {
         this.binder = requireNonNull(binder, "binder is null").skipSources(getClass());
         this.resourceBinder = newSetBinder(binder, Object.class, JaxrsResource.class).permitDuplicates();
-        this.keyBinder = newSetBinder(binder, JaxrsBinding.class, JaxrsResource.class).permitDuplicates();
     }
 
     public static JaxrsBinder jaxrsBinder(Binder binder)
@@ -31,30 +29,22 @@ public class JaxrsBinder
     {
         binder.bind(implementation).in(SINGLETON);
         resourceBinder.addBinding().to(implementation).in(SINGLETON);
-        keyBinder.addBinding().toInstance(new JaxrsBinding(Key.get(implementation)));
     }
 
     public void bind(TypeLiteral<?> implementation)
     {
         binder.bind(implementation).in(SINGLETON);
         resourceBinder.addBinding().to(implementation).in(SINGLETON);
-        registerJaxRsBinding(Key.get(implementation));
     }
 
     public void bind(Key<?> targetKey)
     {
         binder.bind(targetKey).in(SINGLETON);
         resourceBinder.addBinding().to(targetKey).in(SINGLETON);
-        registerJaxRsBinding(targetKey);
     }
 
     public void bindInstance(Object instance)
     {
         resourceBinder.addBinding().toInstance(instance);
-    }
-
-    public void registerJaxRsBinding(Key<?> key)
-    {
-        keyBinder.addBinding().toInstance(new JaxrsBinding(key));
     }
 }
